--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,10 @@
+<!--
+  ~ Copyright (c) 2022. Raphaël Anjou
+  ~ Parts of this code might have been written by "Polytech Nice Sophia", member of "Université Côte d'Azur",
+  ~ as content for their courses.
+  ~ Source files for the exercises can be found in the /resources directory.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
